# multiply

./: .gitignore  README.md  multiply.py  multiplyw.py  pyproject.toml  requirements.txt
