[tool.poetry]
name = "multiply"
version = "0.1.0"
description = "Тренажер таблицы умножения"
authors = ["Nikolai Shishmarev <nicansh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
